# ofdm

soundmodem/: Makefile.am  Makefile.in  acconfig.h  aclocal.m4  cfgwindows  cfgwindowsnodebug  config.h.in  configure  configure.in  mkinstalldirs  soundmodem.initscript  soundmodem.spec
soundmodem/afsk/: Makefile.in  modem.c
soundmodem/configapp/: Makefile.in  configapp.glade  configure  configure.in
soundmodem/configapp/src/: Makefile.am  Makefile.in  app.c  callbacks.h  configapp.h  diag.c  interface.c  interface.h  main.c  scope.c  scope.h  soundmodemconfig.8  spectrum.c  spectrum.h
soundmodem/directx/: Makefile.in
soundmodem/doc/: Makefile.in
soundmodem/flexdrv/: Makefile.in  soundmodem.c
soundmodem/fsk/: Makefile.am  Makefile.in  modem.c  modempsp.c  psp.h
soundmodem/libmisc/: Makefile.am  Makefile.in
soundmodem/matlib/: Makefile.am  Makefile.in  fcmul.c  frmul.c  mat.h
soundmodem/newqpsk/: Makefile.am  Makefile.in  cblock.c  cblock.h  crc.h  demodulator.c  fec.c  fec.h  modemconfig.h  modulator.c  newqpskrx.c  newqpskrx.h  newqpsktx.c  newqpsktx.h  turbo.c  turbo.h  viterbi37.h  vittab.c
soundmodem/ofdm/: Makefile  Makefile.am  Makefile.in  cblock.c  cblock.h  crc.c  demodulator.c  modemconfig.h  modulator.c  newqpskrx.c  newqpskrx.h  newqpsktx.c  newqpsktx.h  turbo.c  turbo.h  viterbi.h  viterbi27.c  viterbi27.h  viterbi37.c  vittab.h
soundmodem/p3dmodem/: Makefile.in
soundmodem/pammodem/: Makefile.in  pamtbl.h
soundmodem/po/: soundmodem.pot
soundmodem/pskmodem/: Makefile.in  psktbl.h
soundmodem/soundcard/: Makefile.am  Makefile.in  audiofilein.c  audioio.c  audioio.h  kisspkt.c  main.c  modem.h  ptt.c  pttio.h  snprintpkt.c  winlog.c  winptt2.c
test/: Makefile  main.c  turbo.c
